tests/sksl/errors/Ossfuzz37457.glsl
### Compilation failed:

error: 1: unknown identifier 'b'
1 error
